--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -42,6 +42,10 @@
   margin: 1rem;
 }
 
+.footer{
+  border-top: 1px solid rgba(var(--callout-border-rgb), 0.25);
+}
+
 /* Mobile */
 @media (max-width: 700px) {
 
