--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -4,6 +4,7 @@
   justify-content: space-between;
   align-items: center;
   max-width: 100vw;
+  height: 72px;
   border-bottom: 1px solid rgba(var(--callout-border-rgb), 0.25);
 }
 
